# ituneslibrary-rs

./: Cargo.toml  README.md
src/: album.rs  artist.rs  artwork.rs  error.rs  lib.rs  library.rs  media_item.rs
src/traits/: album.rs  artist.rs  artwork.rs  library.rs  media_item.rs  mod.rs
